--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,11 +1,7 @@
-
-
 <mat-card *ngFor="let course of courses" class="course-card mat-elevation-z10">
 
     <mat-card-header>
-
         <mat-card-title>{{course.description}}</mat-card-title>
-
     </mat-card-header>
 
     <img mat-card-image [src]="course.iconUrl">
@@ -20,8 +16,7 @@
             VIEW COURSE
         </button>
 
-        <button mat-button mat-raised-button color="accent"
-                (click)="editCourse(course)">
+        <button mat-button mat-raised-button color="accent" (click)="editCourse(course)">
             EDIT
         </button>
 
