023 - Introduction to Reactive Forms - Step-by-Step Example

--- a/src/app/login-reactive/login-reactive.component.html
+++ b/src/app/login-reactive/login-reactive.component.html
@@ -6,14 +6,14 @@
 
     <mat-card-content>
 
-        <form class="login-form data-form">
+        <form class="login-form data-form" [formGroup]="form">
 
             <mat-form-field>
-                <input matInput type="email" name="email" placeholder="Email">
+                <input matInput type="email" name="email" placeholder="Email" formControlName="email">
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput type="password" placeholder="Password">
+                <input matInput type="password" placeholder="Password" formControlName="password">
             </mat-form-field>
 
             <button mat-raised-button color="primary">
@@ -21,6 +21,14 @@
             </button>
 
         </form>
+
+        <div class="form-val">
+            Value: <pre>{{ form.value | json }}</pre>
+        </div>
+
+        <div class="form-val">
+            Validity: {{ form.valid }}
+        </div>
 
     </mat-card-content>
 
