--- a/src/app/login-reactive/login-reactive.component.html
+++ b/src/app/login-reactive/login-reactive.component.html
@@ -9,11 +9,11 @@
         <form class="login-form data-form" [formGroup]="form">
 
             <mat-form-field>
-                <input matInput type="email" name="email" placeholder="Email" [formControl]="this.formControls.email">
+                <input matInput type="email" name="email" placeholder="Email" formControlName="email">
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput type="password" placeholder="Password" [formControl]="this.formControls.password">
+                <input matInput type="password" placeholder="Password" formControlName="password">
             </mat-form-field>
 
             <button mat-raised-button color="primary">
