--- a/src/app/login-reactive/login-reactive.component.html
+++ b/src/app/login-reactive/login-reactive.component.html
@@ -8,15 +8,73 @@
 
         <form class="login-form data-form" [formGroup]="form">
 
+            <!-- Email -->
             <mat-form-field>
-                <input matInput type="email" name="email" placeholder="Email" formControlName="email">
+
+                <!-- Input -->
+                <input
+                    matInput
+                    type="email"
+                    name="email"
+                    placeholder="Email"
+                    formControlName="email"
+                >
+
+                <!-- Required Error -->
+                <mat-error *ngIf="email.errors?.required">
+                    The email is mandatory.
+                </mat-error>
+
+                <!-- Min Length Error -->
+                <mat-error *ngIf="email.errors?.minlength">
+                    Your email must have minimum {{email.errors?.minlength.requiredLength}} chars,
+                    but it only has {{email.errors?.minlength.actualLength}}.
+                </mat-error>
+
+                <!-- Email Format Error -->
+                <mat-error *ngIf="email.errors?.email">
+                    This is not a valid email.
+                </mat-error>
+
             </mat-form-field>
 
+            <!-- Password -->
             <mat-form-field>
-                <input matInput type="password" placeholder="Password" formControlName="password">
+
+                <!-- Input -->
+                <input
+                    matInput
+                    type="password"
+                    name="password"
+                    placeholder="Password"
+                    formControlName="password"
+                >
+
+                <!-- Required Error -->
+                <mat-error *ngIf="password.errors?.required">
+                    The password is mandatory.
+                </mat-error>
+
             </mat-form-field>
 
-            <button mat-raised-button color="primary">
+            <!-- Password Errors -->
+            <ng-container *ngIf="password.errors | onlyOneError:['minlength', 'passwordStrength'] as error">
+
+                <!-- Min Length Error -->
+                <div class="field-message" *ngIf="error.minlength">
+                    Your password must have minimum {{error.minlength.requiredLength}} chars,
+                    but it only has {{error.minlength.actualLength}}.
+                </div>
+
+                <!-- Password Strength Error -->
+                <div class="field-message" *ngIf="error.passwordStrength">
+                    Your password must have lower case, upper case and numeric characters.
+                </div>
+
+            </ng-container>
+
+            <!-- Login Button -->
+            <button mat-raised-button color="primary" [disabled]="!form.valid">
                 Login
             </button>
 
