--- a/src/app/create-course/create-course.component.html
+++ b/src/app/create-course/create-course.component.html
@@ -2,20 +2,42 @@
 
     <h2 class="title">Create New Course</h2>
 
-    <mat-horizontal-stepper class="mat-elevation-z5" labelPosition="bottom">
+    <mat-horizontal-stepper class="mat-elevation-z5" labelPosition="bottom" [linear]="true">
 
-        <mat-step>
+        <!-- Step 1 -->
+        <mat-step [stepControl]="step1.form">
 
+            <!-- Label -->
             <ng-template matStepLabel>
                 Course landing page details
             </ng-template>
 
-            <create-course-step-1></create-course-step-1>
+            <!-- Step 1 -->
+            <create-course-step-1 #step1></create-course-step-1>
     
+            <!-- Previous / Next -->
             <div class="stepper-buttons">
-                <button mat-raised-button color="primary" matStepperNext>
-                    Continue to Step 2
-                </button>
+                <div><button mat-raised-button matStepperPrevious disabled>Back</button></div>
+                <div><button mat-raised-button color="primary" matStepperNext>Continue to Step 2</button></div>
+            </div>
+
+        </mat-step>
+
+        <!-- Step 2 -->
+        <mat-step>
+
+            <!-- Label -->
+            <ng-template matStepLabel>
+                Course pricing details
+            </ng-template>
+
+            <!-- Step 2 -->
+            <create-course-step-2 #step2></create-course-step-2>
+
+            <!-- Previous / Next -->
+            <div class="stepper-buttons">
+                <div><button mat-raised-button matStepperPrevious>Back to Step 1</button></div>
+                <div><button mat-raised-button color="primary" matStepperNext>Continue to Step 3</button></div>
             </div>
 
         </mat-step>
