--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.scss
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.scss
@@ -1,3 +1,14 @@
 mat-form-field {
     display: block;
 }
+
+fieldset {
+    border: 1px solid lightgray;
+    border-radius: 4px;
+}
+
+legend {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px;
+}
