037 - Angular Material Date Range Selector - Step-by-Step Example

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -15,16 +15,15 @@
         <input matInput placeholder="Price" formControlName="price" type="number">
     </mat-form-field>
 
-</div>
+    <!-- Promotional Period -->
+    <mat-form-field>
+        <mat-label>Promotional Period</mat-label>
+        <mat-date-range-input [rangePicker]="promotionalPeriodPicker">
+            <input matStartDate placeholder="Start Date" formControlName="promoStart">
+            <input matEndDate placeholder="End Date" formControlName="promoEnd">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="promotionalPeriodPicker"></mat-datepicker-toggle>
+        <mat-date-range-picker #promotionalPeriodPicker></mat-date-range-picker>
+    </mat-form-field>
 
-<pre>
-    <p>Form Value</p>
-    {{ form.value | json }}
-    <hr>
-    <p>Form Valid</p>
-    {{ form.valid }}
-    <hr>
-    <p>Price Errors</p>
-    {{ priceControl.errors | json }}
-    <hr>
-</pre>
+</div>
