038 - Reactive Forms Multi-field Custom Validation

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -24,6 +24,9 @@
         </mat-date-range-input>
         <mat-datepicker-toggle matSuffix [for]="promotionalPeriodPicker"></mat-datepicker-toggle>
         <mat-date-range-picker #promotionalPeriodPicker></mat-date-range-picker>
+        <mat-error *ngIf="form.errors?.promoPeriod && form.dirty">
+            Start date must be before end date
+        </mat-error>
     </mat-form-field>
 
 </div>
