040 - New Section - Angular Custom Form Controls - a File Upload Component

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -9,6 +9,11 @@
         </mat-radio-group>
     </fieldset>
 
+    <!-- File Upload -->
+    <file-upload requiredFileType="image/png">
+
+    </file-upload>
+
     <!-- Price -->
     <mat-form-field>
         <mat-label>Price</mat-label>
