--- a/src/app/file-upload/file-upload.component.scss
+++ b/src/app/file-upload/file-upload.component.scss
@@ -1,18 +1,21 @@
-
 .file-input {
-  display: none;
+    display: none;
 }
 
 .file-upload {
-display: flex;
-  align-items: flex-end;
+    display: flex;
+    align-items: flex-end;
 }
 
 .upload-btn {
-  margin-left: 10px;
-  margin-bottom:15px;
+    margin-left: 10px;
+    margin-bottom: 30px;
 }
 
 .progress-bar {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+mat-form-field {
+    flex: 1;
 }
