042 - Angular File Upload - Opening a File Upload Dialog

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
-<input type="file" class="file-input">
+<input type="file" class="file-input" #fileUpload (change)="onFileSelected($event)">
 
 <div class="file-upload">
 
@@ -6,7 +6,7 @@
         <input matInput [disabled]="true" [value]="fileName">
     </mat-form-field>
 
-    <button mat-mini-fab color="primary" class="upload-btn">
+    <button mat-mini-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
         <mat-icon>attach_file</mat-icon>
     </button>
 
