044 - Implementing a File Upload Progress Indicator

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -11,3 +11,5 @@
     </button>
 
 </div>
+
+<mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgress" *ngIf="uploadProgress"></mat-progress-bar>
