--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -12,4 +12,9 @@
 
 </div>
 
-<mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgress" *ngIf="uploadProgress"></mat-progress-bar>
+<mat-progress-bar
+    *ngIf="uploadProgress"
+    class="progress-bar"
+    mode="determinate"
+    [value]="uploadProgress"
+></mat-progress-bar>
