--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -6,7 +6,7 @@
         <input matInput [disabled]="true" [value]="fileName">
     </mat-form-field>
 
-    <button mat-mini-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
+    <button mat-mini-fab color="primary" class="upload-btn" (click)="onClick(fileUpload)" [disabled]="disabled">
         <mat-icon>attach_file</mat-icon>
     </button>
 
