047 - ControlValueAccessor - Setting Up DI Configuration and Demo

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -10,7 +10,7 @@
     </fieldset>
 
     <!-- File Upload -->
-    <file-upload requiredFileType="image/png">
+    <file-upload requiredFileType="image/png" formControlName="thumbnail">
 
     </file-upload>
 
