--- a/src/app/create-course/create-course.component.html
+++ b/src/app/create-course/create-course.component.html
@@ -16,10 +16,7 @@
             <create-course-step-1 #step1></create-course-step-1>
     
             <!-- Previous / Next -->
-            <div class="stepper-buttons">
-                <div><button mat-raised-button matStepperPrevious disabled>Back</button></div>
-                <div><button mat-raised-button color="primary" matStepperNext>Continue to Step 2</button></div>
-            </div>
+            <stepper-buttons></stepper-buttons>
 
         </mat-step>
 
@@ -35,10 +32,7 @@
             <create-course-step-2 #step2></create-course-step-2>
 
             <!-- Previous / Next -->
-            <div class="stepper-buttons">
-                <div><button mat-raised-button matStepperPrevious>Back to Step 1</button></div>
-                <div><button mat-raised-button color="primary" matStepperNext>Continue to Step 3</button></div>
-            </div>
+            <stepper-buttons></stepper-buttons>
 
         </mat-step>
 
