--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -1,5 +1,9 @@
 <div [formGroup]="form">
 
+    <address-form
+        legend="Address"
+    ></address-form>
+
     <!-- Title -->
     <mat-form-field>
 
