--- a/src/app/address-form/address-form.component.html
+++ b/src/app/address-form/address-form.component.html
@@ -7,22 +7,22 @@
 
     <!-- Address Line 1 -->
     <mat-form-field>
-        <input matInput placeholder="Address Line 1" formControlName="addressLine1">
+        <input matInput placeholder="Address Line 1" formControlName="addressLine1" (blur)="onTouched()">
     </mat-form-field>
 
     <!-- Address Line 2 -->
     <mat-form-field>
-        <input matInput placeholder="Address Line 2" formControlName="addressLine2">
+        <input matInput placeholder="Address Line 2" formControlName="addressLine2" (blur)="onTouched()">
     </mat-form-field>
 
     <!-- Zip Code -->
     <mat-form-field>
-        <input matInput placeholder="Zip Code" formControlName="zipCode">
+        <input matInput placeholder="Zip Code" formControlName="zipCode" (blur)="onTouched()">
     </mat-form-field>
 
     <!-- City -->
     <mat-form-field>
-        <input matInput placeholder="City" formControlName="city">
+        <input matInput placeholder="City" formControlName="city" (blur)="onTouched()">
     </mat-form-field>
 <!-- 
     <div class="form-val">
