--- a/src/app/create-course/create-course-step-3/create-course-step-3.component.html
+++ b/src/app/create-course/create-course-step-3/create-course-step-3.component.html
@@ -2,27 +2,39 @@
 
 <div class="add-lessons-form" [formGroup]="form">
 
-    <div class="lesson-form-row">
+    <ng-container formArrayName="lessons">
 
-        <mat-form-field appearance="fill">
-            <mat-label>Lesson Title</mat-label>
-            <input matInput placeholder="Lesson Title">
-        </mat-form-field>
+        <ng-container *ngFor="let lessonForm of lessons.controls; let i = index">
 
-        <mat-form-field appearance="fill">
-            <mat-label>Difficulty</mat-label>
-            <mat-select placeholder="Difficulty">
-                <mat-option value="beginner">Beginner</mat-option>
-                <mat-option value="intermediate">Intermediate</mat-option>
-                <mat-option value="advanced">Avanced</mat-option>
-            </mat-select>
-        </mat-form-field>
+            <div class="lesson-form-row" [formGroup]="lessonForm">
 
-        <mat-icon class="delete-btn">delete_forever</mat-icon>
+                <!-- Lesson Title -->
+                <mat-form-field appearance="fill">
+                    <mat-label>Lesson Title</mat-label>
+                    <input matInput placeholder="Lesson Title" formControlName="title">
+                </mat-form-field>
+        
+                <!-- Difficulty -->
+                <mat-form-field appearance="fill">
+                    <mat-label>Difficulty</mat-label>
+                    <mat-select placeholder="Difficulty" formControlName="level">
+                        <mat-option value="beginner">Beginner</mat-option>
+                        <mat-option value="intermediate">Intermediate</mat-option>
+                        <mat-option value="advanced">Avanced</mat-option>
+                    </mat-select>
+                </mat-form-field>
+        
+                <mat-icon class="delete-btn" (click)="deleteLesson(i)">
+                    delete_forever
+                </mat-icon>
+        
+            </div>
+        
+        </ng-container>
 
-    </div>
+    </ng-container>
 
-    <button mat-mini-fab>
+    <button mat-mini-fab (click)="addLesson()">
         <mat-icon class="add-course-btn">
             add
         </mat-icon>
